--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^16.18.54",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
+    "assert": "^2.1.0",
     "gl-matrix": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,5 +44,8 @@
   "devDependencies": {
     "@types/jest": "^29.5.5",
     "ts-jest": "^29.1.1"
+  },
+  "browser": {
+    "assert": false
   }
 }
