--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,11 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "~3.10.0"
 igraph = "^0.11.2"
 moderngl = "^5.8.2"
+numpy = "1.26.0"
+moderngl-window = "^2.4.5"
 
 
 [tool.poetry.group.dev.dependencies]
